test/fail/addinttostring.app
//Wrong operand types for operator

application test

section functions

globals {
  function f(i : Int) : String {
    return i + "test";
  }
}
